<resources>
    <string name="app_name">Group K</string>
    <string name="title_activity_chloe">chloeActivity</string>


    <string name="chloe">Chloe</string>
    <string name="robert">Robert</string>
    <string name="ben">Ben</string>
    <string name="welcome_to_team_k">Welcome to Team K!</string>
    <string name="click_on_one_of_our_names_to_find_out_more">Click on one of our names to find out more:</string>
    <string name="robs_description">"Hi, I\'m Robert and I am an older student returning to TRU to finish my Computer Science degree. \n\nI love exploring BC with my family and really enjoy building stuff in my garage. \n\nMore and more often I find myself building things on my computer as I continue progress with my programming abilities. " </string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hi_im_chloe_i_am_in_a_bachelors_of_computing_science_and_i_spend_my_summers_planting_trees_and_being_the_first_aid_attendant_in_our_camp">Hi! Im Chloe, I am in a Bachelors of Computing Science and I spend my summers planting trees and being the First Aid Attendant in our camp!</string>

    <!-- Ben Nichols hard coded strings -->
    <string name="ben_nichols_name">Ben Nichols</string>
    <string name="ben_nichols_description">Hello, I\'m Ben Nichols, a passionate programmer attending university. I enjoy swimming competively with the WolfPack, and enjoy programming / gaming in my spare time.</string>
    <string name="ben_nichols_pet">This is a picture of my Corgi, Rosieanne!</string>
    <string name="todo">TODO</string>
    <string name="robert_stewart">Robert Stewart</string>
    <string name="picture_of_robert_s_family">Picture of Robert\'s Family</string>

</resources>